More comments in config files

--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -1,3 +1,4 @@
+# Hotlist
 local appended_dirs
 appended_dirs=(
     /usr/share/zsh/5.0.2/functions
@@ -5,4 +6,5 @@ appended_dirs=(
     /usr/local/bin
 )
 
+# Suppress adding (to directory stack) directories visited by n-cd
 local NCD_DONT_PUSHD=0
