Configuration files - added comments about default values

--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -7,4 +7,5 @@ appended_dirs=(
 )
 
 # Suppress adding (to directory stack) directories visited by n-cd
+# Value 0 is the default (directories will be added to dirstack)
 local NCD_DONT_PUSHD=0
