Renamed variable appended_dirs to hotlist

--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -1,6 +1,6 @@
 # Hotlist
-local appended_dirs
-appended_dirs=(
+local hotlist
+hotlist=(
     /usr/share/zsh/5.0.2/functions
     /usr/lib/zsh/5.0.2/zsh
     /usr/local/bin
