Changed installation path to site-functions (README.md, also n-cd.conf)

--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -1,9 +1,10 @@
 # Hotlist
 local hotlist
 hotlist=(
-    /usr/share/zsh/5.0.2/functions
-    /usr/lib/zsh/5.0.2/zsh
+    /usr/share/zsh/site-functions/
+    /usr/share/zsh
     /usr/local/bin
+    /usr/lib
 )
 
 # Suppress adding (to directory stack) directories visited by n-cd
