Colorify slashes in n-cd
Also move unsetting of NLIST_COLORIFY_PATTERN before configuration
is read, so that it may manipulate the variable

--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -17,3 +17,8 @@ local NCD_DONT_PUSHD=0
 # Possible values: reverse, underline. Default
 # (without option set) is reverse
 # local active_text=underline
+
+# Colorize slashes
+local NLIST_COLORING_PATTERN="/"
+local NLIST_COLORING_COLOR=$'\x1b[00;34m'
+local NLIST_COLORING_MATCH_MULTIPLE=1
