Move n-kill coloring setup into its config file

--- a/.config/znt/n-kill.conf
+++ b/.config/znt/n-kill.conf
@@ -2,3 +2,7 @@
 # Possible values: reverse, underline. Default
 # (without option set) is reverse
 # local active_text=underline
+
+# Colorize first two number columns
+local NLIST_COLORING_PATTERN=" #[0-9]## ##[0-9]##"
+local NLIST_COLORING_MATCH_START_OF_LINE=1
