Move n-env coloring setup into its config file

--- a/.config/znt/n-env.conf
+++ b/.config/znt/n-env.conf
@@ -2,3 +2,7 @@
 # Possible values: reverse, underline. Default
 # (without option set) is reverse
 # local active_text=underline
+
+local NLIST_COLORING_PATTERN="[a-zA-Z0-9_]##"
+local NLIST_COLORING_MATCH_MULTIPLE=0
+local NLIST_COLORING_MATCH_START_OF_LINE=1
