Less sophisticated and more powerful pattern coloring

--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -19,6 +19,6 @@ local NCD_DONT_PUSHD=0
 # local active_text=underline
 
 # Colorize slashes
+# (#s) is ^, (#e) is $, # is *, ## is + (comparing to regex)
 local NLIST_COLORING_PATTERN="/"
-local NLIST_COLORING_COLOR=$'\x1b[00;34m'
 local NLIST_COLORING_MATCH_MULTIPLE=1
