--- a/.config/znt/n-kill.conf
+++ b/.config/znt/n-kill.conf
@@ -3,6 +3,7 @@
 # (without option set) is reverse
 # local active_text=underline
 
-# Colorize first two number columns
-local NLIST_COLORING_PATTERN=" #[0-9]## ##[0-9]##"
-local NLIST_COLORING_MATCH_START_OF_LINE=1
+# Colorize first two number columns and a last word in line
+# (#s) is ^, (#e) is $, # is *, ## is + (comparing to regex)
+local NLIST_COLORING_PATTERN="((#s) #[0-9]## ##[0-9]##|[a-zA-Z0-9]##(#e))"
+local NLIST_COLORING_MATCH_MULTIPLE=1
