--- a/.config/znt/n-env.conf
+++ b/.config/znt/n-env.conf
@@ -3,6 +3,6 @@
 # (without option set) is reverse
 # local active_text=underline
 
+# (#s) is ^, (#e) is $, # is *, ## is + (comparing to regex)
 local NLIST_COLORING_PATTERN="[a-zA-Z0-9_]##"
 local NLIST_COLORING_MATCH_MULTIPLE=0
-local NLIST_COLORING_MATCH_START_OF_LINE=1
