--- a/.config/znt/n-kill.conf
+++ b/.config/znt/n-kill.conf
@@ -5,5 +5,5 @@
 
 # Colorize first two number columns and a last word in line
 # (#s) is ^, (#e) is $, # is *, ## is + (comparing to regex)
-local NLIST_COLORING_PATTERN="((#s) #[0-9]## ##[0-9]##|[a-zA-Z0-9]##(#e))"
+local NLIST_COLORING_PATTERN="((#s) #[0-9]## ##[0-9]##|[a-zA-Z0-9 ._-]##(#e))"
 local NLIST_COLORING_MATCH_MULTIPLE=1
