--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -20,5 +20,6 @@ local NCD_DONT_PUSHD=0
 
 # Colorize slashes
 # (#s) is ^, (#e) is $, # is *, ## is + (comparing to regex)
-local NLIST_COLORING_PATTERN="/"
+local NLIST_COLORING_PATTERN="[a-zA-Z0-9 ._-]##(#e)"
+local NLIST_COLORING_COLOR=$'\x1b[00;33m'
 local NLIST_COLORING_MATCH_MULTIPLE=1
