--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -18,7 +18,7 @@ local NCD_DONT_PUSHD=0
 # (without option set) is reverse
 # local active_text=underline
 
-# Colorize slashes
+# Colorize last segments of the paths
 # (#s) is ^, (#e) is $, # is *, ## is + (comparing to regex)
 local NLIST_COLORING_PATTERN="[a-zA-Z0-9 ._-]##(#e)"
 local NLIST_COLORING_COLOR=$'\x1b[00;33m'
