--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -13,9 +13,10 @@ hotlist=(
 # Value 0 is the default (directories will be added to dirstack)
 local NCD_DONT_PUSHD=0
 
-# How should be current element of the list drawn
-# Possible values: reverse, underline. Default
-# (without option set) is reverse
+# How should be current element of the list drawn. Possible values: reverse,
+# underline. Default (without option set) is reverse
+# On Linux virtual terminal this will be enforced to reverse (because of poor
+# underline support on that terminal)
 # local active_text=underline
 
 # Colorize last segments of the paths
