--- a/.config/znt/n-env.conf
+++ b/.config/znt/n-env.conf
@@ -1,6 +1,7 @@
-# How should be current element of the list drawn
-# Possible values: reverse, underline. Default
-# (without option set) is reverse
+# How should be current element of the list drawn. Possible values: reverse,
+# underline. Default (without option set) is reverse
+# On Linux virtual terminal this will be enforced to reverse (because of poor
+# underline support on that terminal)
 # local active_text=underline
 
 # (#s) is ^, (#e) is $, # is *, ## is + (comparing to regex)
