n-cd – support trailing slashes when colorizing last segments of paths

--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -21,5 +21,5 @@ local NCD_DONT_PUSHD=0
 
 # Colorize last segments of the paths
 # (#s) is ^, (#e) is $, # is *, ## is + (comparing to regex)
-local NLIST_COLORING_PATTERN="[a-zA-Z0-9 ._-]##(#e)"
+local NLIST_COLORING_PATTERN="[a-zA-Z0-9 ._-]##/#(#e)"
 local NLIST_COLORING_COLOR=$'\x1b[00;33m'
