Fixed comment about coloring (in n-kill.conf)

--- a/.config/znt/n-kill.conf
+++ b/.config/znt/n-kill.conf
@@ -4,7 +4,7 @@
 # underline support on that terminal)
 # local active_text=underline
 
-# Colorize first two number columns and a last word in line
+# Colorize first number column and a last word in line
 # (#s) is ^, (#e) is $, # is *, ## is + (comparing to regex)
 # | is alternative, but only in ()
 local NLIST_COLORING_PATTERN="((#s) #[0-9]## |[a-zA-Z0-9._-]##(#e))"
