--- a/.config/znt/n-kill.conf
+++ b/.config/znt/n-kill.conf
@@ -4,9 +4,10 @@
 # underline support on that terminal)
 # local active_text=underline
 
-# Colorize first number column and a last word in line
+# Colorize first number column and last path segment
+# This doesn't cover scripts named "[0-9]## *", which should be very rare
 # (#s) is ^, (#e) is $, # is *, ## is + (comparing to regex)
 # | is alternative, but only in ()
-local NLIST_COLORING_PATTERN="((#s) #[0-9]## |[a-zA-Z0-9._-]##(#e))"
+local NLIST_COLORING_PATTERN="((#s) #[0-9]## |[[][^]]#](#e)|[^ 0-9/?\\\\][^/\\\\]#(#e)|[^ /\\\\]##[^0-9/\\\\ ]##[^/\\\\]#(#e))"
 local NLIST_COLORING_COLOR=$'\x1b[00;33m'
 local NLIST_COLORING_MATCH_MULTIPLE=1
