Configuration option for doing instant selection in search mode

--- a/.config/znt/n-history.conf
+++ b/.config/znt/n-history.conf
@@ -8,3 +8,8 @@ local active_text=underline
 local NLIST_COLORING_PATTERN="(while|for |sudo|make|(#s)git|vim(#e)|vim |emacs(#e)|emacs )"
 local NLIST_COLORING_COLOR=$'\x1b[00;33m'
 local NLIST_COLORING_MATCH_MULTIPLE=1
+
+# When 1, pressing enter when in search mode will not
+# only leave the mode, but also do selection and leave
+# n-history
+local NLIST_INSTANT_SELECT=0
