Ability to configure default color (against #15)
New configuration block (n-list.conf):
    # Main color pair (foreground/background)
    local colorpair="white/black"

Also note that Zsh < 5.1.1 can blink colors (this depends on actual
colors used, the default ones are less likely to blink; all this
solved in Zsh 5.1.1 with 36489).

--- a/.config/znt/n-list.conf
+++ b/.config/znt/n-list.conf
@@ -1,3 +1,6 @@
 # Should the list (text, borders) be drawn in bold
 # Value 1 is the default
 local bold=1
+
+# Main color pair (foreground/background)
+local colorpair="white/black"
