New feature: iterated keywords (Ctrl-X, F2 or Ctrl-/)

--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -25,3 +25,7 @@ local NCD_DONT_PUSHD=0
 # (#s) is ^, (#e) is $, # is *, ## is + (comparing to regex)
 local NLIST_COLORING_PATTERN="[a-zA-Z0-9 ._-]##/#(#e)"
 local NLIST_COLORING_COLOR=$'\x1b[00;33m'
+
+# Search keywords, iterated with F2 or Ctrl-X or Ctrl-/
+local -a keywords
+keywords=( "zsh" "local" "git" )
