--- a/.config/znt/n-history.conf
+++ b/.config/znt/n-history.conf
@@ -13,3 +13,7 @@ local NLIST_COLORING_MATCH_MULTIPLE=1
 # only leave the mode, but also do selection and leave
 # n-history
 local NLIST_INSTANT_SELECT=0
+
+# Search keywords, iterated with F2 or Ctrl-X or Ctrl-/
+local -a keywords
+keywords=( "git" "vim" "mplayer" )
