Fixed config variable definition; updated comment

--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -1,6 +1,6 @@
 # Hotlist
-# Try to use $ZSH_VERSION, e.g. /usr/share/zsh/$ZSH_VERSION/functions
-local hotlist
+# Can use e.g. $ZSH_VERSION, e.g. /usr/share/zsh/$ZSH_VERSION/functions
+local -a hotlist
 hotlist=(
     ~/.config/znt
     /usr/share/zsh/site-functions
