New feature: themes

--- a/.config/znt/n-list.conf
+++ b/.config/znt/n-list.conf
@@ -4,3 +4,9 @@ local bold=0
 
 # Main color pair (foreground/background)
 local colorpair="white/black"
+
+# Combinations of colors to try out with Ctrl-T and Ctrl-G
+# The last number is the bold option, 0 or 1
+local -a themes
+themes=( "white/black/1" "green/black/0" "green/black/1" "white/blue/0" "white/blue/1"
+         "magenta/black/0" "magenta/black/1" )
