Set of 256-color themes prepared in n-list.conf. Updated README.md

--- a/.config/znt/n-list.conf
+++ b/.config/znt/n-list.conf
@@ -10,3 +10,8 @@ local colorpair="white/black"
 local -a themes
 themes=( "white/black/1" "green/black/0" "green/black/1" "white/blue/0" "white/blue/1"
          "magenta/black/0" "magenta/black/1" )
+
+# Uncomment when using new (>5.2) Zsh version that supports 256 colors in zcurses
+#themes=( "white/17/0" "10/17/1" "white/24/1" "white/22/0" "white/22/1" "white/25/0" "white/25/1"
+#         "white/59/0" "white/59/1" "white/60/0" "white/60/1" "white/61/0" "white/61/1" "black/65/0"
+#         "black/244/0"  )
