--- a/.config/znt/n-list.conf
+++ b/.config/znt/n-list.conf
@@ -5,6 +5,9 @@ local bold=0
 # Main color pair (foreground/background)
 local colorpair="white/black"
 
+# Should draw the border?
+local border=1
+
 # Combinations of colors to try out with Ctrl-T and Ctrl-G
 # The last number is the bold option, 0 or 1
 local -a themes
