Enforce "reverse" for TERM=screen

--- a/.config/znt/n-kill.conf
+++ b/.config/znt/n-kill.conf
@@ -1,7 +1,7 @@
 # How should be current element of the list drawn. Possible values: reverse,
 # underline. Default (without option set) is reverse
 # On Linux virtual terminal this will be enforced to reverse (because of poor
-# underline support on that terminal)
+# underline support on that terminal). The same for screen/tmux.
 # local active_text=underline
 
 # Colorize first number column and last path segment
