NLIST_INSTANT_SELECT to be set only in n-list.conf

--- a/.config/znt/n-list.conf
+++ b/.config/znt/n-list.conf
@@ -18,3 +18,8 @@ themes=( "white/black/1" "green/black/0" "green/black/1" "white/blue/0" "white/b
 #themes=( "white/17/0" "10/17/1" "white/24/1" "white/22/0" "white/22/1" "white/25/0" "white/25/1"
 #         "white/59/0" "white/59/1" "white/60/0" "white/60/1" "white/61/0" "white/61/1" "black/65/0"
 #         "black/244/0"  )
+
+# When 1, pressing enter when in search mode will not
+# only leave the mode, but also do selection and leave
+# n-history
+local NLIST_INSTANT_SELECT=0
