--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -29,3 +29,40 @@ local NLIST_COLORING_COLOR=$'\x1b[00;33m'
 # Search keywords, iterated with F2 or Ctrl-X or Ctrl-/
 local -a keywords
 keywords=( "zsh" "local" "git" )
+
+
+
+
+
+
+
+#
+# Zshrc integration. All below variables can
+# be set in zshrc and will have precedence
+# over config files
+#
+
+# 1. znt_ncd_hotlist (array)
+if (( ${+znt_ncd_hotlist} )); then
+    hotlist=( "${znt_ncd_hotlist[@]}" )
+fi
+
+# 2. znt_ncd_dont_pushd
+NCD_DONT_PUSHD=${znt_ncd_dont_pushd:-$NCD_DONT_PUSHD}
+
+# 3. znt_ncd_active_text
+active_text=${znt_ncd_active_text:-$active_text}
+
+# 4. znt_ncd_nlist_coloring_pattern
+NLIST_COLORING_PATTERN=${znt_ncd_nlist_coloring_pattern:-$NLIST_COLORING_PATTERN}
+
+# 5. znt_ncd_nlist_coloring_color
+NLIST_COLORING_COLOR=${znt_ncd_nlist_coloring_color:-$NLIST_COLORING_COLOR}
+
+# 6. znt_ncd_nlist_coloring_match_multiple
+NLIST_COLORING_MATCH_MULTIPLE=${znt_ncd_nlist_coloring_match_multiple:-$NLIST_COLORING_MATCH_MULTIPLE}
+
+# 7. znt_ncd_keywords (array)
+if (( ${+znt_ncd_keywords} )); then
+    keywords=( "${znt_ncd_keywords[@]}" )
+fi
