Fix bug with active_text setting leaking across tools

--- a/.config/znt/n-history.conf
+++ b/.config/znt/n-history.conf
@@ -1,5 +1,5 @@
 # How should be current element of the list drawn. Possible values: reverse,
-# underline. Default (without option set) is reverse
+# underline.
 # On Linux virtual terminal this will be enforced to reverse (because of poor
 # underline support on that terminal). The same for screen/tmux.
 local active_text=underline
