--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -16,10 +16,10 @@ hotlist=(
 local NCD_DONT_PUSHD=0
 
 # How should be current element of the list drawn. Possible values: reverse,
-# underline. Default (without option set) is reverse
+# underline.
 # On Linux virtual terminal this will be enforced to reverse (because of poor
 # underline support on that terminal). The same for screen/tmux.
-# local active_text=underline
+local active_text=reverse
 
 # Colorize last segments of the paths
 # (#s) is ^, (#e) is $, # is *, ## is + (comparing to regex)
