--- a/.config/znt/n-env.conf
+++ b/.config/znt/n-env.conf
@@ -1,8 +1,8 @@
 # How should be current element of the list drawn. Possible values: reverse,
-# underline. Default (without option set) is reverse
+# underline.
 # On Linux virtual terminal this will be enforced to reverse (because of poor
 # underline support on that terminal). The same for screen/tmux.
-# local active_text=underline
+local active_text=reverse
 
 # (#s) is ^, (#e) is $, # is *, ## is + (comparing to regex)
 local NLIST_COLORING_PATTERN="[a-zA-Z0-9_]##"
