--- a/.config/znt/n-functions.conf
+++ b/.config/znt/n-functions.conf
@@ -4,10 +4,10 @@ local feditor="zed"
 # local feditor="vared"
 
 # How should be current element of the list drawn. Possible values: reverse,
-# underline. Default (without option set) is reverse
+# underline.
 # On Linux virtual terminal this will be enforced to reverse (because of poor
 # underline support on that terminal). The same for screen/tmux.
-# local active_text=underline
+local active_text=reverse
 
 
 
