--- a/.config/znt/n-panelize.conf
+++ b/.config/znt/n-panelize.conf
@@ -1,8 +1,8 @@
 # How should be current element of the list drawn. Possible values: reverse,
-# underline. Default (without option set) is reverse
+# underline.
 # On Linux virtual terminal this will be enforced to reverse (because of poor
 # underline support on that terminal). The same for screen/tmux.
-# local active_text=underline
+local active_text=reverse
 
 
 
