--- a/.config/znt/n-cd.conf
+++ b/.config/znt/n-cd.conf
@@ -42,27 +42,27 @@ keywords=( "zsh" "local" "git" )
 # over config files
 #
 
-# 1. znt_ncd_hotlist (array)
-if (( ${+znt_ncd_hotlist} )); then
-    hotlist=( "${znt_ncd_hotlist[@]}" )
+# 1. znt_cd_hotlist (array)
+if (( ${+znt_cd_hotlist} )); then
+    hotlist=( "${znt_cd_hotlist[@]}" )
 fi
 
-# 2. znt_ncd_dont_pushd
-NCD_DONT_PUSHD=${znt_ncd_dont_pushd:-$NCD_DONT_PUSHD}
+# 2. znt_cd_dont_pushd
+NCD_DONT_PUSHD=${znt_cd_dont_pushd:-$NCD_DONT_PUSHD}
 
-# 3. znt_ncd_active_text
-active_text=${znt_ncd_active_text:-$active_text}
+# 3. znt_cd_active_text
+active_text=${znt_cd_active_text:-$active_text}
 
-# 4. znt_ncd_nlist_coloring_pattern
-NLIST_COLORING_PATTERN=${znt_ncd_nlist_coloring_pattern:-$NLIST_COLORING_PATTERN}
+# 4. znt_cd_nlist_coloring_pattern
+NLIST_COLORING_PATTERN=${znt_cd_nlist_coloring_pattern:-$NLIST_COLORING_PATTERN}
 
-# 5. znt_ncd_nlist_coloring_color
-NLIST_COLORING_COLOR=${znt_ncd_nlist_coloring_color:-$NLIST_COLORING_COLOR}
+# 5. znt_cd_nlist_coloring_color
+NLIST_COLORING_COLOR=${znt_cd_nlist_coloring_color:-$NLIST_COLORING_COLOR}
 
-# 6. znt_ncd_nlist_coloring_match_multiple
-NLIST_COLORING_MATCH_MULTIPLE=${znt_ncd_nlist_coloring_match_multiple:-$NLIST_COLORING_MATCH_MULTIPLE}
+# 6. znt_cd_nlist_coloring_match_multiple
+NLIST_COLORING_MATCH_MULTIPLE=${znt_cd_nlist_coloring_match_multiple:-$NLIST_COLORING_MATCH_MULTIPLE}
 
-# 7. znt_ncd_keywords (array)
-if (( ${+znt_ncd_keywords} )); then
-    keywords=( "${znt_ncd_keywords[@]}" )
+# 7. znt_cd_keywords (array)
+if (( ${+znt_cd_keywords} )); then
+    keywords=( "${znt_cd_keywords[@]}" )
 fi
